<resources>
    <string name="app_name">app</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sign_upp">Create An Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create an Account</string>
    <string name="identification_number">Identification Number</string>
    <string name="nevermind_i_already_have_one">Nevermind, I Already have one</string>
    <string name="log_in">Log In</string>
    <string name="user_id">User ID</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">Welcome</string>
    <string name="user_message">What would you like to do today?</string>

    <!--    <string name="hello_blank_fragment">Hello blank fragment</string>-->
    <string-array name="sessions_offered">
        <item>Fall</item>
        <item>Winter</item>
        <item>Summer</item>
    </string-array>

    <string name="header">Summary of Courses Taken</string>
    <string name="add_comp_course">Add Completed Course</string>
    <string name="make_timeline">Input Courses to Generate Timeline</string>

    <string name="want_course">Fill in the required field with the desired courses (Case-Sensitive)</string>
    <string name="new_courses">New Courses to Take</string>
    <string name="generate_timeline">Generate Timeline</string>
    <string name="confirm_add">Add to List</string>
    <string name="logout">Log Out</string>
    <string name="timetable">Time Table</string>
    <string name="fall">Fall</string>
    <string name="winter">Winter</string>
    <string name="summer">Summer</string>
    <string name="time_table">Time Table</string>
    <string name="add_completed_course">Add Completed Course</string>
    <string name="welcome_student">Welcome,</string>
    <string name="welcome_st">Welcome</string>
</resources>
